ui/webui/resources/wasm/vendor/darling/tests/compile-fail/attrs_without_forward_attrs.rs
use darling::FromDeriveInput;
use syn::{Attribute, Ident};

#[derive(FromDeriveInput)]
struct HelloArgs {
    ident: Ident,
    attrs: Vec<Attribute>,
}

fn main() {}
